--- a/MLM.ipynb
+++ b/MLM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,9 @@
     "import inspect\n",
     "import os\n",
     "from dataclasses import dataclass\n",
+    "from huggingface_hub import PyTorchModelHubMixin\n",
+    "\n",
+    "from huggingface_hub import PyTorchModelHubMixin\n",
     "\n",
     "\n",
     "\n",
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +70,7 @@
     "    time_stamps: int\n",
     "    context_len: int\n",
     "    use_cache: bool\n",
+    "    use_flash: bool\n",
     "\n",
     "    num_experts: int\n",
     "    moe_topk: int\n",
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,6 +240,7 @@
     "        super().__init__()\n",
     "\n",
     "        self.use_cache = config.use_cache\n",
+    "        self.use_flash = config.use_flash\n",
     "\n",
     "        self.num_heads = config.num_heads\n",
     "        self.num_kv_heads = config.num_heads if config.num_kv_heads is None else config.num_kv_heads\n",
@@ -281,6 +286,24 @@
     "        queries = apply_rotary_pos(q, freqs_complex, device=x.device)\n",
     "        keys = apply_rotary_pos(k, freqs_complex, device=x.device)\n",
     "\n",
+    "        if self.use_cache:\n",
+    "            # Initialize cache if not exist\n",
+    "            if self.cache_k is None:\n",
+    "                self.cache_k = torch.zeros(\n",
+    "                    (c_batch_size, self.config.context_len, self.num_kv_heads, self.head_dim),\n",
+    "                    device=x.device\n",
+    "                )\n",
+    "                self.cache_v = torch.zeros(\n",
+    "                    (c_batch_size, self.config.context_len, self.num_kv_heads, self.head_dim),\n",
+    "                    device=x.device\n",
+    "                )\n",
+    "            # Update cache\n",
+    "            self.cache_k[:c_batch_size, start_pos:start_pos + c_context_len] = keys\n",
+    "            self.cache_v[:c_batch_size, start_pos:start_pos + c_context_len] = v\n",
+    "\n",
+    "            keys = self.cache_k[:c_batch_size, :start_pos + c_context_len]\n",
+    "            v = self.cache_v[:c_batch_size, :start_pos + c_context_len]\n",
+    "            \n",
     "        # if self.use_cache:\n",
     "        #     self.cache_k[:c_batch_size, start_pos:start_pos+c_context_len] = keys\n",
     "        #     self.cache_v[:c_batch_size, start_pos:start_pos+c_context_len] = v\n",
@@ -288,20 +311,24 @@
     "        #     keys = self.cache_k[:c_batch_size, :start_pos+c_context_len]\n",
     "        #     v = self.cache_v[:c_batch_size, :start_pos+c_context_len]\n",
     "\n",
-    "        keys = repeat_kv(keys, self.num_rep)\n",
-    "        values = repeat_kv(v, self.num_rep)\n",
-    "\n",
-    "        queries = queries.transpose(1, 2)\n",
-    "        keys = keys.transpose(1, 2)\n",
-    "        values = values.transpose(1, 2)\n",
-    "\n",
-    "        attention = torch.matmul(queries, keys.transpose(-2, -1)) * (1.0 / math.sqrt(self.head_dim))\n",
-    "\n",
-    "        attention = torch.tril(attention[:, :, :c_context_len, :c_context_len])\n",
-    "        attention = attention.masked_fill(attention == 0, float(\"-inf\"))\n",
-    "\n",
-    "        attention = F.softmax(attention, dim=-1).type_as(queries)\n",
-    "        output = torch.matmul(attention, values)\n",
+    "        if self.use_flash:\n",
+    "            output = F.scaled_dot_product_attention(queries, keys, v, is_causal=True, enable_gqa=True)\n",
+    "            \n",
+    "        else:\n",
+    "            keys = repeat_kv(keys, self.num_rep)\n",
+    "            values = repeat_kv(v, self.num_rep)\n",
+    "    \n",
+    "            queries = queries.transpose(1, 2)\n",
+    "            keys = keys.transpose(1, 2)\n",
+    "            values = values.transpose(1, 2)\n",
+    "    \n",
+    "            attention = torch.matmul(queries, keys.transpose(-2, -1)) * (1.0 / math.sqrt(self.head_dim))\n",
+    "    \n",
+    "            attention = torch.tril(attention[:, :, :c_context_len, :c_context_len])\n",
+    "            attention = attention.masked_fill(attention == 0, float(\"-inf\"))\n",
+    "    \n",
+    "            attention = F.softmax(attention, dim=-1).type_as(queries)\n",
+    "            output = torch.matmul(attention, values)\n",
     "\n",
     "        output = output.transpose(2, 1).contiguous().view(c_batch_size, c_context_len, c_dim)\n",
     "        return self.wo(output)\n",
@@ -426,11 +453,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Transformer(nn.Module):\n",
+    "class Transformer(nn.Module, PyTorchModelHubMixin):\n",
     "    def __init__(self, config):\n",
     "        super().__init__()\n",
     "\n",
@@ -528,16 +555,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127.108096 M parameters\n",
+      "295.30624 M parameters\n",
       "loaded ~400000000 tokens\n",
-      "num decayed parameter tensors: 113, with 127,074,304 parameters\n",
+      "num decayed parameter tensors: 369, with 295,272,448 parameters\n",
       "num non-decayed parameter tensors: 33, with 33,792 parameters\n",
       "using fused AdamW: True\n"
      ]
@@ -564,11 +591,12 @@
     "    context_len = 1024,\n",
     "    \n",
     "    use_cache = False,\n",
+    "    use_flash = False,\n",
     "\n",
     "    num_experts = 6,\n",
-    "    moe_topk = 2,\n",
+    "    moe_topk = 1,\n",
     "    moe_eps = 1e-6,\n",
-    "    moe_aux_loss_coef = 0.007\n",
+    "    moe_aux_loss_coef = 0.01\n",
     ")\n",
     "\n",
     "m = Transformer(config)\n",
@@ -599,27 +627,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test\n",
+    "# # test\n",
     "# x, y = data_loader.next_batch()\n",
     "# x, y = x.to(device), y.to(device)\n",
-    "# logits, loss = model(x, y)"
+    "# logits, loss, tt_loss = model(x, y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0, loss: 11.18124, tt_loss:10.99638, norm: 0.92968, time: 13922.37ms, tok/s: 4707.24\n",
+      "epoch: 5, loss: 11.17305, tt_loss:10.98733, norm: 1.02752, time: 10929.89ms, tok/s: 5996.04\n",
+      "epoch: 10, loss: 11.13877, tt_loss:10.95368, norm: 1.11623, time: 11319.04ms, tok/s: 5789.89\n",
+      "epoch: 15, loss: 11.06697, tt_loss:10.88146, norm: 1.68980, time: 11637.23ms, tok/s: 5631.58\n",
+      "epoch: 20, loss: 10.82770, tt_loss:10.63756, norm: 3.54019, time: 11845.90ms, tok/s: 5532.38\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 60\n",
     "for epoch in range(epochs):\n",
     "    t0 = time.time()\n",
     "    last_epoch = epochs - 1\n",
     "\n",
+    "    accumulated_tt_loss = 0.0\n",
     "    model.train()\n",
     "    accumulated_loss = 0.0\n",
     "    optmizer.zero_grad()\n",
@@ -629,9 +670,12 @@
     "        x, y = x.to(device), y.to(device)\n",
     "    \n",
     "        with torch.autocast(device_type=device, dtype=torch.bfloat16):\n",
-    "            logits, loss = model(x, y)\n",
+    "            logits, loss, tt_loss = model(x, y)\n",
     "        loss /= mini_epochs\n",
+    "        tt_loss /= mini_epochs\n",
+    "        \n",
     "        accumulated_loss += loss.detach()\n",
+    "        accumulated_tt_loss += tt_loss.detach()\n",
     "    \n",
     "        if ddp:\n",
     "            model.require_backward_grad_sync = (mini_epoch == mini_epochs-1)\n",
@@ -653,24 +697,27 @@
     "\n",
     "    # wrtie to the file losses\n",
     "    if master_process and epoch%5==0:\n",
-    "        print(f\"epoch: {epoch}, loss: {accumulated_loss:.5f}, norm: {norm:.5f}, time: {dt*1000:.2f}ms, tok/s: {data_loader.B*data_loader.T*mini_epochs*ddp_world_size/dt:.2f}\")\n",
+    "        print(f\"epoch: {epoch}, loss: {accumulated_loss:.5f}, tt_loss:{accumulated_tt_loss:.5f}, norm: {norm:.5f}, time: {dt*1000:.2f}ms, tok/s: {data_loader.B*data_loader.T*mini_epochs*ddp_world_size/dt:.2f}\")\n",
     "        with open(log_file, \"a\") as f:\n",
-    "            f.write(f\"epoch:{epoch} loss:{accumulated_loss.item():.5f}\\n\")\n",
+    "            f.write(f\"epoch:{epoch} loss:{accumulated_loss.item():.5f} tt_loss:{accumulated_tt_loss.item():.5f}\\n\")\n",
+    "\n",
     "if ddp:\n",
     "    destroy_process_group()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save_pretrained(\"./model_testing\", config=config)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -684,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
