--- a/MLM.ipynb
+++ b/MLM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,10 +72,12 @@
     "    use_cache: bool\n",
     "    use_flash: bool\n",
     "\n",
-    "    num_experts: int\n",
-    "    moe_topk: int\n",
+    "    # moe_type: str                     #DeepSeek/default\n",
+    "    moe_num_experts: int\n",
+    "    moe_routed_experts: int       #top_k\n",
     "    moe_eps: float = 1e-6\n",
-    "    moe_aux_loss_coef: float= 0.007\n",
+    "    moe_aux_loss_coef: float = 0.01\n",
+    "    moe_shared_experts: int = 0\n",
     "\n",
     "    rmsnorm_eps: float = 1e-6\n",
     "    rope_theta: float = 1e5\n",
@@ -86,17 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "device: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ddp = int(os.environ.get('RANK', -1)) != -1 \n",
     "if ddp:\n",
@@ -128,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,11 +348,15 @@
     "    def forward(self, x):\n",
     "        return self.w2(F.silu(self.w1(x)) * self.w3(x))\n",
     "\n",
-    "class FFNwMoE(nn.Module):\n",
+    "class FFNwMoE(nn.Module): # MoE Layer and DeepSeek MoE Layer (choose in config)\n",
     "    def __init__(self, config):\n",
     "        super().__init__()\n",
+    "        # self.moe_type = config.moe_type.lower()\n",
+    "        self.moe_routed_experts = config.moe_routed_experts # top_k\n",
     "        self.moe_aux_loss_coef = config.moe_aux_loss_coef\n",
     "        self.moe_eps = config.moe_eps\n",
+    "        self.moe_shared_experts = config.moe_shared_experts #if self.moe_type==\"deepseek\" else 0\n",
+    "        self.num_experts = config.moe_num_experts\n",
     "\n",
     "        multiple_of=4\n",
     "        ffn_dim_multiplier=None\n",
@@ -371,13 +369,20 @@
     "        hidden_dim = multiple_of * ((hidden_dim + multiple_of - 1) // multiple_of)\n",
     "        self.hidden_dim = hidden_dim\n",
     "\n",
-    "        self.top_k = config.moe_topk\n",
-    "\n",
-    "        self.num_experts = config.num_experts\n",
     "        self.router = nn.Linear(config.num_dims, self.num_experts, bias=False)\n",
     "        self.experts = nn.ModuleList()\n",
     "        for _ in range(self.num_experts):\n",
     "            self.experts.append(\n",
+    "                nn.ModuleList([\n",
+    "                    nn.Linear(config.num_dims, hidden_dim, bias=False),\n",
+    "                    nn.Linear(hidden_dim, config.num_dims, bias=False),\n",
+    "                    nn.Linear(config.num_dims, hidden_dim, bias=False)\n",
+    "                ]))\n",
+    "        \n",
+    "        # shared experts (for DeepSeekMoE)\n",
+    "        self.shared_experts = nn.ModuleList()\n",
+    "        for _ in range(self.moe_shared_experts):\n",
+    "            self.shared_experts.append(\n",
     "                nn.ModuleList([\n",
     "                    nn.Linear(config.num_dims, hidden_dim, bias=False),\n",
     "                    nn.Linear(hidden_dim, config.num_dims, bias=False),\n",
@@ -390,7 +395,7 @@
     "\n",
     "\n",
     "        router_out = F.softmax(self.router(x_flat), dim=-1)\n",
-    "        topk_probs, topk_indices = router_out.topk(self.top_k, dim=-1)\n",
+    "        topk_probs, topk_indices = router_out.topk(self.moe_routed_experts, dim=-1)\n",
     "        \n",
     "        output = torch.zeros_like(x_flat)\n",
     "\n",
@@ -408,7 +413,7 @@
     "        router_prob_mean = router_out.mean(dim=0)\n",
     "        aux_loss = self.moe_aux_loss_coef * torch.sum(density * router_prob_mean) * self.num_experts\n",
     "        \n",
-    "        for i in range(self.top_k):\n",
+    "        for i in range(self.moe_routed_experts):\n",
     "            expert_index = topk_indices[:, i]\n",
     "            expert_probs = topk_probs[:, i]\n",
     "\n",
@@ -422,6 +427,13 @@
     "                \n",
     "                expert_output = w2(F.silu(w1(x_for_expert)) * w3(x_for_expert))\n",
     "                output[idx] += expert_output * expert_probs[idx].unsqueeze(-1)\n",
+    "\n",
+    "        # shared exprets(for DeepSeekMoE)\n",
+    "        for shared_expert_id in range(self.moe_shared_experts):\n",
+    "            w1, w2, w3 = self.shared_experts[shared_expert_id]\n",
+    "            expert_output = w2(F.silu(w1(x_flat)) * w3(x_flat))\n",
+    "            output = output + expert_output\n",
+    "\n",
     "\n",
     "        return output.view(c_batch_size, c_context_len, c_dim), aux_loss\n",
     "\n",
@@ -453,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,6 +539,7 @@
     "        \n",
     "        if targets is None:\n",
     "            loss = None\n",
+    "            tt_loss = None\n",
     "        else:\n",
     "            c_batch_size, c_context_len, c_dim = logits.shape\n",
     "            logits = logits.view(c_batch_size*c_context_len, c_dim)\n",
@@ -541,11 +554,11 @@
     "        for c_tkn_pos in range(max_tokens):\n",
     "            if use_cache:\n",
     "                if c_tkn_pos == 0:\n",
-    "                    logits, _ = self.forward(x, start_pos=c_tkn_pos)\n",
+    "                    logits, _, tt_loss = self.forward(x, start_pos=c_tkn_pos)\n",
     "                else:\n",
-    "                    logits, _ = self.forward(x[:, -1], start_pos=c_tkn_pos)\n",
+    "                    logits, _, tt_loss = self.forward(x[:, -1], start_pos=c_tkn_pos)\n",
     "            else:\n",
-    "                logits, _ = self.forward(x)\n",
+    "                logits, _, tt_loss = self.forward(x)\n",
     "            logits = logits[:, -1, :]\n",
     "            probs = F.softmax(logits, dim=-1)\n",
     "            next_token = torch.multinomial(probs, num_samples=1)\n",
@@ -555,21 +568,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "295.30624 M parameters\n",
-      "loaded ~400000000 tokens\n",
-      "num decayed parameter tensors: 369, with 295,272,448 parameters\n",
-      "num non-decayed parameter tensors: 33, with 33,792 parameters\n",
-      "using fused AdamW: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# def main():\n",
@@ -593,14 +594,16 @@
     "    use_cache = False,\n",
     "    use_flash = False,\n",
     "\n",
-    "    num_experts = 6,\n",
-    "    moe_topk = 1,\n",
+    "    # moe_type=\"default\"            #DeepSeek/default\n",
+    "    moe_num_experts = 6,\n",
+    "    moe_routed_experts = 1,         #top_k\n",
     "    moe_eps = 1e-6,\n",
-    "    moe_aux_loss_coef = 0.01\n",
+    "    moe_aux_loss_coef = 0.01,\n",
+    "    moe_shared_experts = 0,         #0 for default MoE. >0 for DeepSeekMoE\n",
     ")\n",
     "\n",
-    "m = Transformer(config)\n",
-    "model = m.to(device)\n",
+    "model = Transformer(config)\n",
+    "model = model.to(device)\n",
     "model = torch.compile(model)\n",
     "# if ddp:\n",
     "#     model = DDP(model, device_ids=[ddp_local_rank]) \n",
@@ -627,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,19 +644,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch: 0, loss: 11.18124, tt_loss:10.99638, norm: 0.92968, time: 13922.37ms, tok/s: 4707.24\n",
-      "epoch: 5, loss: 11.17305, tt_loss:10.98733, norm: 1.02752, time: 10929.89ms, tok/s: 5996.04\n",
-      "epoch: 10, loss: 11.13877, tt_loss:10.95368, norm: 1.11623, time: 11319.04ms, tok/s: 5789.89\n",
-      "epoch: 15, loss: 11.06697, tt_loss:10.88146, norm: 1.68980, time: 11637.23ms, tok/s: 5631.58\n",
-      "epoch: 20, loss: 10.82770, tt_loss:10.63756, norm: 3.54019, time: 11845.90ms, tok/s: 5532.38\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs = 60\n",
     "for epoch in range(epochs):\n",
@@ -700,18 +691,21 @@
     "        print(f\"epoch: {epoch}, loss: {accumulated_loss:.5f}, tt_loss:{accumulated_tt_loss:.5f}, norm: {norm:.5f}, time: {dt*1000:.2f}ms, tok/s: {data_loader.B*data_loader.T*mini_epochs*ddp_world_size/dt:.2f}\")\n",
     "        with open(log_file, \"a\") as f:\n",
     "            f.write(f\"epoch:{epoch} loss:{accumulated_loss.item():.5f} tt_loss:{accumulated_tt_loss.item():.5f}\\n\")\n",
-    "\n",
     "if ddp:\n",
     "    destroy_process_group()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_pretrained(\"./model_testing\", config=config)\n"
+    "# # model.save_pretrained(\"./model_testing\", config=config)\n",
+    "# for i in range(20):\n",
+    "#     t0 = time.time()\n",
+    "#     print(enc.decode(model.generate(torch.tensor(enc.encode(\"I am a large language model,\")).to(device).view(1, -1), 100)[0].tolist()))\n",
+    "#     print(\"without cache:\", time.time()-t0)"
    ]
   }
  ],
