AUXILIARY-LOSS-FREE LOAD BALANCING
from here https://arxiv.org/pdf/2408.15664

--- a/MLM.ipynb
+++ b/MLM.ipynb
@@ -78,6 +78,7 @@
     "    moe_eps: float = 1e-6\n",
     "    moe_aux_loss_coef: float = 0.01\n",
     "    moe_shared_experts: int = 0\n",
+    "    use_lossfreebalance: bool = False\n",
     "\n",
     "    rmsnorm_eps: float = 1e-6\n",
     "    rope_theta: float = 1e5\n",
@@ -88,9 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "ddp = int(os.environ.get('RANK', -1)) != -1 \n",
     "if ddp:\n",
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,12 +307,6 @@
     "            keys = self.cache_k[:c_batch_size, :start_pos + c_context_len]\n",
     "            v = self.cache_v[:c_batch_size, :start_pos + c_context_len]\n",
     "            \n",
-    "        # if self.use_cache:\n",
-    "        #     self.cache_k[:c_batch_size, start_pos:start_pos+c_context_len] = keys\n",
-    "        #     self.cache_v[:c_batch_size, start_pos:start_pos+c_context_len] = v\n",
-    "            \n",
-    "        #     keys = self.cache_k[:c_batch_size, :start_pos+c_context_len]\n",
-    "        #     v = self.cache_v[:c_batch_size, :start_pos+c_context_len]\n",
     "\n",
     "        if self.use_flash:\n",
     "            output = F.scaled_dot_product_attention(queries, keys, v, is_causal=True, enable_gqa=True)\n",
@@ -358,6 +361,8 @@
     "        self.moe_shared_experts = config.moe_shared_experts #if self.moe_type==\"deepseek\" else 0\n",
     "        self.num_experts = config.moe_num_experts\n",
     "\n",
+    "        self.use_lossfreebalance = config.use_lossfreebalance\n",
+    "\n",
     "        multiple_of=4\n",
     "        ffn_dim_multiplier=None\n",
     "        hidden_dim = 4 * config.num_dims\n",
@@ -389,29 +394,45 @@
     "                    nn.Linear(config.num_dims, hidden_dim, bias=False)\n",
     "                ]))\n",
     "            \n",
+    "\n",
+    "        if self.use_lossfreebalance:\n",
+    "            self.expert_biases = nn.Parameter(torch.zeros(self.num_experts))\n",
+    "            \n",
     "    def forward(self, x):\n",
     "        c_batch_size, c_context_len, c_dim = x.shape\n",
     "        x_flat = x.view(-1, c_dim) #c_batch_size * c_context_len, c_dim\n",
     "\n",
+    "        router_out = self.router(x_flat)\n",
+    "        router_probs = F.softmax(router_out, dim=-1) \n",
     "\n",
-    "        router_out = F.softmax(self.router(x_flat), dim=-1)\n",
-    "        topk_probs, topk_indices = router_out.topk(self.moe_routed_experts, dim=-1)\n",
-    "        \n",
+    "        _, topk_indices = router_out.topk(self.moe_routed_experts, dim=-1)\n",
+    "        if not self.use_lossfreebalance:\n",
+    "            topk_probs, _ = router_probs.topk(self.moe_routed_experts, dim=-1)\n",
+    "            expert_mask = F.one_hot(topk_indices[:, 0], self.num_experts).float()\n",
+    "            density = expert_mask.mean(dim=0)\n",
+    "            router_prob_mean = router_probs.mean(dim=0)\n",
+    "            aux_loss = self.moe_aux_loss_coef * torch.sum(density * router_prob_mean) * self.num_experts\n",
+    "\n",
+    "        if self.use_lossfreebalance:\n",
+    "            router_out = router_out + self.expert_biases\n",
+    "            router_probs = torch.sigmoid(router_out) # from https://arxiv.org/pdf/2408.15664 paper\n",
+    "            topk_probs = router_probs.gather(-1, topk_indices)\n",
+    "            topk_probs = topk_probs / topk_probs.sum(dim=-1, keepdim=True)\n",
+    "\n",
+    "            aux_loss = (router_probs, topk_indices)\n",
+    "\n",
+    "        # topk_probs, topk_indices = router_probs.topk(self.moe_routed_experts, dim=-1)\n",
     "        output = torch.zeros_like(x_flat)\n",
     "\n",
-    "        # expert_mask = torch.zeros_like(router_out).scatter(-1, topk_indices, 1.0)\n",
+    "        # expert_mask = torch.zeros_like(router_probs).scatter(-1, topk_indices, 1.0)\n",
     "        # density = expert_mask.mean(dim=0)\n",
-    "        # router_prob_mean = router_out.mean(dim=0)\n",
+    "        # router_prob_mean = router_probs.mean(dim=0)\n",
     "\n",
     "        # cv_expert = density.std() / (density.mean() + self.moe_eps)\n",
     "        # cv_router = router_prob_mean.std() / (router_prob_mean.mean() + self.moe_eps)\n",
     "        \n",
     "        # aux_loss = (cv_expert**2 + cv_router**2) * self.moe_aux_loss_coef\n",
     "\n",
-    "        expert_mask = F.one_hot(topk_indices[:, 0], self.num_experts).float()\n",
-    "        density = expert_mask.mean(dim=0)\n",
-    "        router_prob_mean = router_out.mean(dim=0)\n",
-    "        aux_loss = self.moe_aux_loss_coef * torch.sum(density * router_prob_mean) * self.num_experts\n",
     "        \n",
     "        for i in range(self.moe_routed_experts):\n",
     "            expert_index = topk_indices[:, i]\n",
@@ -465,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,6 +499,8 @@
     "        self.num_heads = config.num_heads\n",
     "        self.num_layers = config.num_layers\n",
     "        self.context_len = config.context_len\n",
+    "\n",
+    "        self.use_lossfreebalance = config.use_lossfreebalance\n",
     "\n",
     "        self.tokens_embedding = nn.Embedding(self.vocab_size, self.num_dims)\n",
     "\n",
@@ -531,7 +554,8 @@
     "\n",
     "        for block in self.blocks:\n",
     "            x, aux_loss = block(x, freqs_complex=freqs_complex, start_pos=start_pos)\n",
-    "            total_aux_loss += aux_loss\n",
+    "            if not self.use_lossfreebalance:\n",
+    "                total_aux_loss += aux_loss\n",
     "\n",
     "        x = self.norm(x)\n",
     "        logits = self.ll_head(x)\n",
@@ -545,7 +569,10 @@
     "            logits = logits.view(c_batch_size*c_context_len, c_dim)\n",
     "            targets = targets.view(c_batch_size*c_context_len)\n",
     "            tt_loss = F.cross_entropy(logits, targets)\n",
-    "            loss = tt_loss + total_aux_loss\n",
+    "            if not self.use_lossfreebalance: loss = tt_loss + total_aux_loss\n",
+    "            else: \n",
+    "                loss = tt_loss\n",
+    "                tt_loss = aux_loss\n",
     "\n",
     "        return logits, loss, tt_loss\n",
     "\n",
@@ -568,9 +595,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "295.306336 M parameters\n",
+      "loaded ~400000000 tokens\n",
+      "num decayed parameter tensors: 369, with 295,272,448 parameters\n",
+      "num non-decayed parameter tensors: 49, with 33,888 parameters\n",
+      "using fused AdamW: True\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# def main():\n",
@@ -600,6 +639,7 @@
     "    moe_eps = 1e-6,\n",
     "    moe_aux_loss_coef = 0.01,\n",
     "    moe_shared_experts = 0,         #0 for default MoE. >0 for DeepSeekMoE\n",
+    "    use_lossfreebalance = True\n",
     ")\n",
     "\n",
     "model = Transformer(config)\n",
@@ -630,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,9 +684,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0, loss: 10.99790, tt_loss:0.00000, norm: 3.25858, time: 11404.39ms, tok/s: 5746.56\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 60\n",
+    "update_rate = 1e-5\n",
+    "use_lossfreebalance = True\n",
     "for epoch in range(epochs):\n",
     "    t0 = time.time()\n",
     "    last_epoch = epochs - 1\n",
@@ -663,14 +713,26 @@
     "        with torch.autocast(device_type=device, dtype=torch.bfloat16):\n",
     "            logits, loss, tt_loss = model(x, y)\n",
     "        loss /= mini_epochs\n",
-    "        tt_loss /= mini_epochs\n",
+    "        if not use_lossfreebalance:\n",
+    "            tt_loss /= mini_epochs\n",
+    "            accumulated_tt_loss += tt_loss.detach()\n",
     "        \n",
     "        accumulated_loss += loss.detach()\n",
-    "        accumulated_tt_loss += tt_loss.detach()\n",
+    "        \n",
     "    \n",
     "        if ddp:\n",
     "            model.require_backward_grad_sync = (mini_epoch == mini_epochs-1)\n",
     "        loss.backward()\n",
+    "\n",
+    "\n",
+    "        if use_lossfreebalance:\n",
+    "            for block in range(0, 16):\n",
+    "                expert_counts = torch.bincount(tt_loss[1].flatten(), minlength=model.blocks[block].ffn.moe_routed_experts)  \n",
+    "                avg_count = expert_counts.float().mean()\n",
+    "                for i, count in enumerate(expert_counts):\n",
+    "                    error = avg_count - count.float()\n",
+    "                    model.blocks[block].ffn.expert_biases.data[i] += update_rate * torch.sign(error)\n",
+    "\n",
     "    if ddp:\n",
     "        dist.all_reduce(accumulated_loss, op=dist.ReduceOp.AVG)\n",
     "    \n",
@@ -689,8 +751,8 @@
     "    # wrtie to the file losses\n",
     "    if master_process and epoch%5==0:\n",
     "        print(f\"epoch: {epoch}, loss: {accumulated_loss:.5f}, tt_loss:{accumulated_tt_loss:.5f}, norm: {norm:.5f}, time: {dt*1000:.2f}ms, tok/s: {data_loader.B*data_loader.T*mini_epochs*ddp_world_size/dt:.2f}\")\n",
-    "        with open(log_file, \"a\") as f:\n",
-    "            f.write(f\"epoch:{epoch} loss:{accumulated_loss.item():.5f} tt_loss:{accumulated_tt_loss.item():.5f}\\n\")\n",
+    "        # with open(log_file, \"a\") as f:\n",
+    "        #     f.write(f\"epoch:{epoch} loss:{accumulated_loss.item():.5f} tt_loss:{accumulated_tt_loss:.5f}\\n\")\n",
     "if ddp:\n",
     "    destroy_process_group()"
    ]
@@ -707,6 +769,128 @@
     "#     print(enc.decode(model.generate(torch.tensor(enc.encode(\"I am a large language model,\")).to(device).view(1, -1), 100)[0].tolist()))\n",
     "#     print(\"without cache:\", time.time()-t0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1024, 1])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model.blocks[0]\n",
+    "tt_loss[1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expert_counts = torch.bincount(tt_loss[1].flatten(), minlength=model.blocks[0].ffn.moe_routed_experts)  \n",
+    "\n",
+    "expert_counts.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.blocks[0].ffn.expert_biases.data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, count in enumerate(expert_counts):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expert_counts = torch.bincount(tt_loss[1].flatten(), minlength=model.blocks[0].ffn.moe_routed_experts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 16, 647,  29, 298,  30,   4], device='cuda:0')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expert_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
