--- a/MLM.ipynb
+++ b/MLM.ipynb
@@ -20,8 +20,6 @@
     "from dataclasses import dataclass\n",
     "from huggingface_hub import PyTorchModelHubMixin\n",
     "\n",
-    "from huggingface_hub import PyTorchModelHubMixin\n",
-    "\n",
     "\n",
     "\n",
     "from torch.distributed import init_process_group, destroy_process_group\n",
@@ -60,25 +58,25 @@
     "    vocab_size: int\n",
     "\n",
     "    num_dims: int\n",
-    "    num_heads: int\n",
+    "    num_heads: int                      # querry heads\n",
     "    num_kv_heads: int\n",
     "    num_layers: int\n",
-    "    ffn_hidden_dims: int\n",
+    "    # ffn_hidden_dims: int                # \n",
     "\n",
     "    batch_size: int\n",
     "    mini_batches: int\n",
     "    time_stamps: int\n",
     "    context_len: int\n",
-    "    use_cache: bool\n",
-    "    use_flash: bool\n",
+    "    use_cache: bool                     # KV-cache\n",
+    "    use_flash: bool                     # flash attention\n",
     "\n",
-    "    # moe_type: str                     #DeepSeek/default\n",
-    "    moe_num_experts: int\n",
-    "    moe_routed_experts: int       #top_k\n",
+    "    # moe_type: str                     # DeepSeek/default\n",
+    "    moe_num_experts: int                # total number of experts\n",
+    "    moe_routed_experts: int             # top_k (how many experts to choose per token)\n",
     "    moe_eps: float = 1e-6\n",
     "    moe_aux_loss_coef: float = 0.01\n",
-    "    moe_shared_experts: int = 0\n",
-    "    use_lossfreebalance: bool = False\n",
+    "    moe_shared_experts: int = 0         # number of experts shared experts for DeepSeekMoE\n",
+    "    use_lossfreebalance: bool = False   # AUXILIARY-LOSS-FREE LOAD BALANCING STRATEGY FOR MIXTURE-OF-EXPERTS from DeepSeek https://arxiv.org/pdf/2408.15664\n",
     "\n",
     "    rmsnorm_eps: float = 1e-6\n",
     "    rope_theta: float = 1e5\n",
@@ -101,6 +99,7 @@
     }
    ],
    "source": [
+    "# DDP\n",
     "ddp = int(os.environ.get('RANK', -1)) != -1 \n",
     "if ddp:\n",
     "    init_process_group(backend=\"nccl\")\n",
@@ -118,7 +117,7 @@
     "    device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "    print(f\"device: {device}\")\n",
     "    \n",
-    "\n",
+    "# lr scheduler\n",
     "def get_lr(epoch, warmup_lr_steps, max_lr, min_lr, epochs):\n",
     "    if epoch < warmup_lr_steps:\n",
     "        return (max_lr * (epoch+1)/warmup_lr_steps)\n",
@@ -620,7 +619,7 @@
     "    num_heads = 16,\n",
     "    num_kv_heads = 4,\n",
     "    num_layers = 16,\n",
-    "    ffn_hidden_dims = 4 * 1024,\n",
+    "    # ffn_hidden_dims = 4 * 1024,\n",
     "\n",
     "    rmsnorm_eps = 1e-6,\n",
     "    rope_theta = 1e5,\n",
@@ -653,7 +652,7 @@
     "print(sum(p.numel() for p in model.parameters())/1e6, 'M parameters')\n",
     "\n",
     "data_loader = DataLoader(config.mini_batches, config.time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size, data_dir=data_dir, split=\"train\")\n",
-    "# val_loader = DataLoader(config.mini_batches, config.time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size, data_dir=data_dir, split=\"val\")\n",
+    "val_loader = DataLoader(config.mini_batches, config.time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size, data_dir=data_dir, split=\"val\")\n",
     "\n",
     "max_lr = 6e-4\n",
     "min_lr = max_lr * 0.1\n",
@@ -895,7 +894,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -909,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
