--- a/LightLM.ipynb
+++ b/LightLM.ipynb
@@ -750,8 +750,8 @@
     "    # wrtie to the file losses\n",
     "    if master_process and epoch%5==0:\n",
     "        print(f\"epoch: {epoch}, loss: {accumulated_loss:.5f}, tt_loss:{accumulated_tt_loss:.5f}, norm: {norm:.5f}, time: {dt*1000:.2f}ms, tok/s: {data_loader.B*data_loader.T*mini_epochs*ddp_world_size/dt:.2f}\")\n",
-    "        # with open(log_file, \"a\") as f:\n",
-    "        #     f.write(f\"epoch:{epoch} loss:{accumulated_loss.item():.5f} tt_loss:{accumulated_tt_loss:.5f}\\n\")\n",
+    "        with open(log_file, \"a\") as f:\n",
+    "            f.write(f\"epoch:{epoch} loss:{accumulated_loss.item():.5f} tt_loss:{accumulated_tt_loss:.5f}\\n\")\n",
     "if ddp:\n",
     "    destroy_process_group()"
    ]
