--- a/LightLM.ipynb
+++ b/LightLM.ipynb
@@ -71,23 +71,23 @@
     "config = ModelConfig(\n",
     "        vocab_size = tokenizer.vocab_size,\n",
     "\n",
-    "        num_dims = 832,\n",
+    "        num_dims = 512,\n",
     "        num_heads = 16,\n",
     "        num_kv_heads = 4,\n",
     "        num_layers = 32,\n",
-    "        ffn_hidden_dims = 1024,\n",
+    "        ffn_hidden_dims = 512 * 4,\n",
     "\n",
     "        rmsnorm_eps = 1e-6,\n",
     "        rope_theta = 1e5,\n",
     "    \n",
-    "        context_len = 1024,\n",
+    "        context_len = 1536,\n",
     "        \n",
     "        use_cache = False,\n",
-    "        use_flash = False,\n",
+    "        use_flash = True,\n",
     "        use_moe = False,\n",
     "\n",
-    "        moe_num_experts = 4,\n",
-    "        moe_active_experts = 4,\n",
+    "        moe_num_experts = 2,\n",
+    "        moe_active_experts = 2,\n",
     "        moe_eps = 1e-6,\n",
     "        moe_aux_loss_coef = 0.01,\n",
     "        moe_shared_experts = 1,\n",
@@ -113,6 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "trainer.train(data_loader)"
    ]
   }
